# gdml

./: CMakeLists.txt  ChangeLog  GNUmakefile  LCGMakefile  LCGReleaseNotes  LICENSE.md  README.md  configure.in
CPPGDML/: CERNConfigure.csh  CERNConfigure.sh  CMakeLists.txt  GDMLSetup  GNUmakefile  README  SLACConfigure.sh  ac.sh  aclocal.m4  configure  configure.in
CPPGDML/Common/Processes/: GNUmakefile
CPPGDML/Common/Saxana/: GNUmakefile
CPPGDML/Common/Writer/: GNUmakefile
CPPGDML/Examples/SimpleExtension/: ColorType.h  DetectorConstruction.h  PhysicsList.h  SimpleExtension.cpp  SimpleExtensionLibLoad.cpp  SimpleExtensionProcessor.cpp  SimpleExtensionProcessor.h  color.h  colorProcess.cpp  colorSubscriber.cpp  colorrefProcess.cpp  test.gdml  volumeExtendedSubscriber.cpp
CPPGDML/Examples/g4N02gdml/: ExN02PhysicsList.cpp  ExN02PhysicsList.hh  ExN02PrimaryGeneratorAction.hh  GNUmakefile  History  g4N02gdml.cpp
CPPGDML/Examples/g4gogdml/: README  geo.gdml  gogdmlDetectorConstruction.cpp  gogdmlDetectorConstruction.h  gogdmlPhysicsList.cpp  gogdmlPhysicsList.h  gogdmlPrimaryGeneratorAction.cpp  gogdmlPrimaryGeneratorAction.h  modular_first.gdml  opticalsurfaces.gdml  scale.gdml
CPPGDML/G4Binding/G4Subscribers/: GNUmakefile
CPPGDML/STEPBinding/STEPWriter/: README
CPPGDML/cmake/: GDMLConfig.cmake.in
CPPGDML/config/make/: application.gmk  gdml_link_libs.gmk  local_settings.gmk.in  package.gmk  package_deps.gmk
Common/Processes/Processes/: BooleanSolidTypeProcess.h  DimensionsTypeProcess.h  DivisionPlacementTypeProcess.h  FacetTypeProcess.h  FileReferenceTypeProcess.h  LogicalSurfaceTypeProcess.h  MaterialTypeProcess.h  ParameterisationAlgTypeProcess.h  ParameterisedPlacementTypeProcess.h  ReferenceTypeProcess.h  ReplicaPlacementTypeProcess.h  SinglePlacementTypeProcess.h  SolidTypeProcess.h  SurfacePropertyTypeProcess.h
Common/Processes/src/: DProcess.cpp  DrefProcess.cpp  LibLoadProcesses.cpp  PProcess.cpp  PrefProcess.cpp  TProcess.cpp  TrefProcess.cpp  assemblyProcess.cpp  bordersurfaceProcess.cpp  box_dimensionsProcess.cpp  compositeProcess.cpp  constantProcess.cpp  defineProcess.cpp  dimensionsProcess.cpp  directionProcess.cpp  divisionvolProcess.cpp  ellipsoidProcess.cpp  eltubeProcess.cpp  expressionProcess.cpp  firstProcess.cpp  hypeProcess.cpp  isotopeProcess.cpp  loopProcess.cpp  materialProcess.cpp  materialrefProcess.cpp  opticalsurfaceProcess.cpp  paraProcess.cpp  paramalgProcess.cpp  parameterised_position_sizeProcess.cpp  paramvolProcess.cpp  physvolProcess.cpp  physvolrefProcess.cpp  polyconeProcess.cpp  polyhedraProcess.cpp  positionrefProcess.cpp  propertyProcess.cpp  quadrangularProcess.cpp  quantityProcess.cpp  reflectedsolidProcess.cpp  replicate_along_axisProcess.cpp  (+17 more)
Common/Saxana/Saxana/: ASCIIAttributeList.h  Action.h  GDMLEntityResolver.h  ProcessingConfigurator.h  ProcessingContext.h  ProcessingState.h  SAX2EventGun.h  SAXComponentFactoryBase.h  SAXComponentFactoryTable.h  SAXComponentObject.h  SAXEvent.h  SAXEventGun.h  SAXObject.h  SAXProcessor.h  SAXStateProcess.h  SAXSubscriberPool.h  StateProcessMap.h
Common/Saxana/src/: GDMLEntityResolver.cpp  SAXComponentFactoryTable.cpp  SAXProcessor.cpp  SAXSubscriberPool.cpp
Common/Schema/: GNUmakefile
Common/Schema/Schema/: AssemblyVolumeType.h  AtomType.h  BooleanSolidType.h  ConstantType.h  ContentGroup.h  DimensionsType.h  DivisionPlacementType.h  ExpressionType.h  FacetType.h  FileReferenceType.h  IdentifiableQuantityVectorType.h  IdentifiableVolumeType.h  LogicalSurfaceType.h  MaterialElementType.h  MaterialIsotopeType.h  MaterialMixtureType.h  MaterialType.h  ParameterisationAlgorithmType.h  ParameterisedPlacementType.h  PorPref.h  QuantityVectorType.h  ReferenceType.h  ReplicaPlacementType.h  ReplicationAlgorithmType.h  SinglePlacementType.h  TorTref.h  VariableType.h  VolumeType.h  assembly.h  atom.h  boolean_intersection.h  boolean_union.h  bordersurface.h  box.h  box_dimensions.h  composite.h  defineType.h  dimensions.h  directionType.h  element.h  (+30 more)
Common/Writer/Writer/: Cursor.h  DefinitionsCursor.h  Document.h  DocumentBuilder.h  EditableDocument.h  EditableDocumentRegistry.h  Element.h  MaterialsCursor.h  SetupCursor.h  SolidsCursor.h  StructureCursor.h
Common/Writer/src/: Cursor.cpp  DefinitionsCursor.cpp  DocumentBuilder.cpp  EditableDocument.cpp  Element.cpp  MaterialsCursor.cpp  SetupCursor.cpp  SolidsCursor.cpp
Examples/: setup.csh  setup.csh.in
Examples/SimpleExtension/: ColorType.h  DetectorConstruction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  README  color.h  colorProcess.cpp  colorSubscriber.cpp  colorrefProcess.cpp  run.mac  volumeExtendedSubscriber.cpp
Examples/g4N02gdml/: DetectorConstruction.cpp  DetectorConstruction.hh  ExN02PrimaryGeneratorAction.cpp  History  README  run.mac
Examples/g4gogdml/: GNUmakefile  auxiliary.gdml  g4gogdml.cpp  matricesandloops.gdml  modular_main.gdml  modular_second.gdml  run.mac  split.gdml
G4Binding/G4Evaluator/: GNUmakefile
G4Binding/G4Processor/: GNUmakefile
G4Binding/G4Processor/G4Processor/: GDMLProcessor.h
G4Binding/G4Processor/src/: GDMLProcessor.cpp
G4Binding/G4Subscribers/G4Subscribers/: BooleanSolidTypeSubscriber.h  GenericPositionSizeParameterisation.h  MaterialLocator.h  Util.h
G4Binding/G4Subscribers/src/: LibLoadSubscribers.cpp  MaterialLocator.cpp  assemblySubscriber.cpp  defineSubcriber.cpp  ellipsoidSubscriber.cpp  eltubeSubscriber.cpp  opticalsurfaceSubscriber.cpp  paraSubscriber.cpp  polyhedraSubscriber.cpp  reflectedsolidSubscriber.cpp  setupSubscriber.cpp  sphereSubscriber.cpp  subtractionSubscriber.cpp  (+10 more)
G4Binding/G4Writer/: GNUmakefile
GDMLSchema/: gdml_materials.xsd  gdml_solids.xsd
GDMLSchema/Examples/: lhcb.gdml  lhcbhcal.gdml  lhcbvelo.gdml  parameterized.gdml  solids.gdml
STEPBinding/STEPWriter/: GNUmakefile
cmake/: GDMLConfigVersion.cmake.in
config/autoconf/: clhep.m4  gdml.m4  geant4.m4  util.m4  xerces.m4
config/make/: application.gmk  gdml_link_libs.gmk  local_settings.gmk.in  package.gmk  package_ext_deps.gmk  project.gmk
(+281 files in other folders)
