# $Header: /cvs/lcd/gdml2/CPPGDML/configure.in,v 1.2 2013/04/09 21:21:43 jeremy Exp $
# Process this file with autoconf to produce a configure script.

AC_INIT([CPPGDML],[2.9.0],[jeremym@slac.stanford.edu])

AC_CANONICAL_HOST
AC_SUBST([host])
AC_SUBST([host_alias])
AC_SUBST([host_cpu])
AC_SUBST([host_vendor])
AC_SUBST([host_os])

# don't take defaults from this
#CXXFLAGS=""

AC_CONFIG_SRCDIR([G4Binding/G4Writer/src/G4GDMLWriter.cpp])

# Checks for programs.
AC_PROG_CXX
dnl AC_PROG_CC

# checks for typedefs, structures, and compiler characteristics
dnl AC_HEADER_STDBOOL
dnl AC_C_CONST
dnl AC_C_INLINE
dnl AC_TYPE_SIZE_T

# checks for library functions
dnl AC_FUNC_ERROR_AT_LINE
dnl AC_CHECK_FUNCS([sqrt])

# initialize GDML setup
GDML_INIT()

# setup GDML
GDML_SETUP_GDML()

# setup Xerces
GDML_SETUP_XERCESC()

# setup CLHEP
dnl GDML_SETUP_CLHEP

# setup Geant4
GDML_SETUP_GEANT4()

# basic substitutions
AC_SUBST([CXXFLAGS])
AC_SUBST([CPPFLAGS])
AC_SUBST([DEFS])
#
AC_SUBST([PWD])

# All settings from Autoconf are put into this include file.
AC_CONFIG_FILES([config/make/local_settings.gmk])
AC_CONFIG_FILES([Examples/setup.csh])

AC_OUTPUT
